--- a/src/components/1. IPAddyInput/IPAddyInput.css
+++ b/src/components/1. IPAddyInput/IPAddyInput.css
@@ -1,27 +1,53 @@
 .ipAddyInput-container {
+    display: flex;
+    flex-flow: column wrap;
     background-image: url('../../images/pattern-bg.png');
     height: 35vh;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.ipAddyInput-title {
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+}
+.ipAddyInput-title h1, h2{
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .ipAddyInput-search {
+    position: relative;
     display: flex;
-    width: 100%;
+    width: 60%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .ipAddyInput-search form {
     width: 100%;
-    max-width: 1281px;    
+    max-width: 1281px;
 }
 
 .ipAddyInput-search form input {
-    width: 25%;
-    height: 50px;
+    width: 50%;
+    height: 55px;
     border-radius: 15px;
+    border: none;
 }
 .ipAddyInput-search form button {
-    width: 5%;
-    height: 50px;
-    border-radius: 15px;
+    position: absolute;
+    width: 60px;
+    height: 57px;
+    border-radius: 0px 15px 15px 0px;
+    border: none;
+    right: 225px;
+    font-size: 25px;
+    font-weight: bolder;
+    background-color: black;
+    color: white;
 }
