--- a/src/components/1. IPAddyInput/IPAddyInput.css
+++ b/src/components/1. IPAddyInput/IPAddyInput.css
@@ -20,15 +20,18 @@
 }
 
 .ipAddyInput-search {
-    position: relative;
     display: flex;
-    width: 60%;
+    flex-flow: row ;
+    width: 100%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    justify-content: center;
+    align-items: center;
 
 }
 .ipAddyInput-search form {
+    position: relative;
     width: 100%;
     max-width: 1281px;
 }
@@ -38,16 +41,18 @@
     height: 55px;
     border-radius: 15px;
     border: none;
+    padding-left: 10px;
 }
 .ipAddyInput-search form button {
-    position: absolute;
     width: 60px;
     height: 57px;
     border-radius: 0px 15px 15px 0px;
     border: none;
-    right: 225px;
+    right: 23%;
     font-size: 25px;
     font-weight: bolder;
     background-color: black;
     color: white;
+    cursor: pointer;
+    position: absolute;
 }
