--- a/src/components/2. IPAddyRes/IPAddyRes.css
+++ b/src/components/2. IPAddyRes/IPAddyRes.css
@@ -7,5 +7,7 @@
     max-width: 1281px;
     background-color: white;
     border-radius: 20px;
-    top: 30%;
+    top: 35vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
