--- a/src/components/2. IPAddyRes/IPAddyRes.css
+++ b/src/components/2. IPAddyRes/IPAddyRes.css
@@ -2,8 +2,9 @@
     position: absolute;
     display: flex;
     flex-flow: row wrap;
+    justify-content: space-evenly;
     height: 200px;
-    width: 90%;
+    width: 85%;
     max-width: 1281px;
     background-color: white;
     border-radius: 20px;
