--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body, html {
   width: 100vw;
   font-family: 'Poppins', sans-serif;
   position: relative;
+  font-family: 'Rubik', sans-serif;
 }
 
 .fixed-pos {
