--- a/src/components/1. IPAddyInput/IPAddyInput.css
+++ b/src/components/1. IPAddyInput/IPAddyInput.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: column wrap;
     background-image: url('../../images/pattern-bg.png');
-    height: 35vh;
+    height: 30vh;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -42,6 +42,7 @@
     border-radius: 15px;
     border: none;
     padding-left: 10px;
+    cursor: pointer;
 }
 .ipAddyInput-search form button {
     width: 60px;
