--- a/src/components/2. IPAddyRes/IPAddyRes.css
+++ b/src/components/2. IPAddyRes/IPAddyRes.css
@@ -8,6 +8,7 @@
     max-width: 1281px;
     background-color: white;
     border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     top: 35vh;
     left: 50%;
     transform: translate(-50%, -50%);
