--- a/src/components/2. IPAddyRes/IPAddyRes.css
+++ b/src/components/2. IPAddyRes/IPAddyRes.css
@@ -8,7 +8,7 @@
     max-width: 1281px;
     padding: 10px;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     top: 35vh;
     left: 50%;
@@ -17,13 +17,12 @@
 }
 
 .ipAddyRes-sub {
-    width: 20%;
-    /* min-width: 218px; */
+    width: 22%;
 }
 .ipAddyRes-title {
     font-size: 0.80em;
     font-weight: 700;
-    margin-top: 35px;
+    margin-top: 25px;
     margin-bottom: 0px;
     color: hsl(0, 0%, 59%);
     text-align: flex-start;
@@ -67,7 +66,8 @@
     .ipAddyRes-container {
         flex-flow: column nowrap;
         height: 250px;
-        width: 400px;
+        max-width: 400px;
+        width: 90%;
     }
     .ipAddyRes-sub {
         width: 90%;
